[metadata]
name = lastlogtocsv
version = 1.0.0
description = Convert lastlog Linux file to csv.
author = Franck FERMAN
author_email = fferman@protonmail.ch
url = https://github.com/franckferman/lastlogtocsv

[options]
packages = find:

[options.entry_points]
console_scripts =
    lastlogtocsv = lastlogtocsv.main:main
